[gd_scene load_steps=2 format=3 uid="uid://df6ixvca8lqou"]

[ext_resource type="Script" path="res://Scripts/Spawner.gd" id="1_hmfv4"]

[node name="Spawner" type="Node2D"]
position = Vector2(576, 0)
script = ExtResource("1_hmfv4")

[node name="SpawnPoint1" type="Node2D" parent="."]
position = Vector2(-640, 0)

[node name="SpawnPoint2" type="Node2D" parent="."]
position = Vector2(640, 0)

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
